# minho_team_ros

./: .gitignore  CMakeLists.txt  README.md  Test.md  install  install_nocfg  package.xml
Common/: fieldSelect.cfg  iptable.cfg
Common/Configs/ctrl_cfg/Robot1/: control.cfg
Common/Configs/ctrl_cfg/Robot3/: control.cfg
Common/Configs/kin_cfg/: kinlut.cfg  kinparams.cfg
Common/Configs/loc_cfg/: pid.cfg
Common/Configs/loc_cfg/Robot1/: lut.cfg  mirror.cfg  property.cfg
Common/Configs/loc_cfg/Robot2/: mirror.cfg
Common/Configs/loc_cfg/Robot3/: mirror.cfg  worldconstruction.cfg
Common/Configs/loc_cfg/Robot4/: kalman.cfg
Common/Configs/loc_cfg/Robot5/: pid.cfg  property.cfg  worldconstruction.cfg
Common/Fields/: GLar.map  Lar.map  Lar.view  Official.map  Official.view
Common/Utils/: getIP.h  rttimer.h  types.h
ai_node/: README.md
ai_node/include/: ai.h  rdefender.h  rgkeeper.h  role.h  rstop.h  rstriker.h  rsupstriker.h
ai_node/src/: ai.cpp  main.cpp  rdefender.cpp  rgkeeper.cpp  role.cpp  rstop.cpp  rstriker.cpp  rsupstriker.cpp
artificialinteligence_node/: artificial_intelligence_README.md
coms_node/: README.md
coms_node/include/: multicast.h
coms_node/src/: main.cpp  multicast.cpp
control_node/: README.md  control_README.md
control_node/config/Fields/: Official.view
control_node/config/Robot1/: control.cfg
control_node/config/Robot2/: control.cfg
control_node/config/Robot5/: control.cfg
control_node/include/: behavior.h  comsmatlab.h  dijkstrashortestpath.h  fundamental.h  motion.h  voronoi.h
control_node/src/: behavior.cpp  comsmatlab.cpp  dijkstrashortestpath.cpp  fundamental.cpp  main.cpp  motion.cpp  voronoi.cpp
goalkeeper_node/: GOfficial.map
goalkeeper_node/include/: kinectvision.h  lidarlocalization.h
goalkeeper_node/src/: kinectvision.cpp  lidarlocalization.cpp  main.cpp
hardware_node/: README.md  generate  hardware_README.md  hardware_README.md~  inoComands.md  install  upload
hardware_node/MinhoTeamHardware/.build/: environment.pickle
hardware_node/MinhoTeamHardware/.build/mega2560/: Makefile  Makefile.deps  Makefile.sketch  firmware.elf  firmware.hex
hardware_node/MinhoTeamHardware/.build/mega2560/EEPROM/: EEPROM.d
hardware_node/MinhoTeamHardware/.build/mega2560/Omni3MD/: dependencies.d
hardware_node/MinhoTeamHardware/.build/mega2560/TimerOne/: TimerOne.d
hardware_node/MinhoTeamHardware/.build/mega2560/Wire/: dependencies.d
hardware_node/MinhoTeamHardware/.build/mega2560/arduino/: dependencies.d
hardware_node/MinhoTeamHardware/.build/mega2560/ros_lib/: dependencies.d  duration.d  time.d
hardware_node/MinhoTeamHardware/.build/mega2560/src/: MinhoTeamHardware.cpp  dependencies.d
hardware_node/MinhoTeamHardware/.build/mega2560/stdCpp/: algorithm.d  associative_base.d  bitset.d  char_traits.d  complex.d  del_op.d  del_opnt.d  del_opv.d  del_opvnt.d  dependencies.d  deque.d  eh_alloc.d  eh_globals.d  exception.d  fstream.d  func_exception.d  iomanip.d  ios.d  limits.d  (+25 more)
hardware_node/MinhoTeamHardware/MinhoTeamHardware/: MinhoTeamHardware.ino
hardware_node/MinhoTeamHardware/lib/Omni3MD/: Omni3MD.cpp  Omni3MD.h  keywords.txt
hardware_node/MinhoTeamHardware/src/: MinhoTeamHardware.ino
hardware_node/config/: imu.lin  imu.lin~
hardware_node/include/: hardware.h  hardware.h~  mt_hardware_defines.h~  mt_hardware_paths.h~
hardware_node/src/: hardware.cpp  hardware.cpp~  main_hardware.cpp  main_hardware.cpp~
hidden/: CMakeLists.txt  package.xml
hw_test_node/: main.cpp
lidar_node/include/: lidarlocalization.h
lidar_node/src/: lidarlocalization.cpp  main.cpp
localization_node/: README.md
localization_node/config/: main.cfg
localization_node/config/Fields/: Lar.view  Official.view
localization_node/config/Robot1/: image.cfg  lut.cfg  mirror.cfg  visionparams.cfg
localization_node/include/: Angle.h  Blob.h  RLE.h  ScanLines.h  blackflycam.h  blackflycamera.h  blackflydriver.h  cameracalib.h  configserver.h  imageprocessor.h  kmeans.h  localization.h  minhotypes.h  pid.h  properties.h  types.h
localization_node/save/: blackflycamera.cpp  blackflycamera.h  blackflydriver.cpp  blackflydriver.h
localization_node/src/: Angle.cpp  RLE.cpp  Vec.cpp  blackflycam.cpp  blackflycamera.cpp  configserver.cpp  imageprocessor.cpp  kmeans.cpp  localization.cpp  main.cpp  main_localization.cpp
localization_node/src/libs/: Blob.cpp  RLE.cpp  ScanLines.cpp  blackflycam.cpp  cameracalib.cpp  pid.cpp  properties.cpp
low_level/: uninstall
low_level/MinhoTeamHardware/: ino.ini
low_level/MinhoTeamHardware/MinhoTeamHardware/: MinhoTeamHardware.ino
msg/: ControlerError.msg  PID.msg  ROI.msg  aiInfo.msg  baseStationInfo.msg  cameraProperty.msg  controlConfig.msg  controlInfo.msg  goalKeeperInfo.msg  hardwareInfo.msg  imageConfig.msg  imgRequest.msg  imuConfig.msg  interAgentInfo.msg  interestPoint.msg  label.msg  mirrorConfig.msg  obstacle.msg  omniConfig.msg  omniVisionConfig.msg  pathData.msg  pose.msg  position.msg  range.msg  refBoxInfo.msg  robotInfo.msg  segment.msg  teleop.msg  velocity.msg  visionHSVConfig.msg  visualizerConfig.msg  worldConfig.msg
srv/: requestCamPID.srv  requestCamProperty.srv  requestControlConfig.srv  requestExtendedDebug.srv  requestIMULinTable.srv  requestImage.srv  requestKick.srv  requestOmniProps.srv  requestOmniVisionConf.srv  requestROI.srv  requestReloc.srv  requestResetEncoders.srv  requestResetIMU.srv
tools/minho_teleop/include/: mainwindow.h  mainwindow.ui  ui_mainwindow.h
tools/minho_teleop/src/: main.cpp  mainwindow.cpp  qrc_resources.cpp
tools/old_tools_BACKUP/goalkeeper_lidar_mapGen/: goalkeeper_lidar_mapGen.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  types.h
tools/old_tools_BACKUP/goalkeeper_lidar_mapGen/config/: Lar.view  Official.view  teste.map
tools/old_tools_BACKUP/mtVisionConfig/: Angle.h  RLE.cpp  RLE.h  ScanLines.cpp  ScanLines.h  Vec.h  imageprocessor.cpp  imageprocessor.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mtVisionConfig.pro  mtVisionConfig.pro.user.f47f3e4  types.h
utils/: install_utils
utils/process/: operations.hpp
(+42 files in other folders)
